# int-ball2_simulator

./: INSTALL.md  README.md
Int-Ball2_platform_gse/src/ground_system/operator_gui/src/: camera_view_panel.cpp  intball_route_panel.cpp
Int-Ball2_platform_gse/src/ground_system/platform_gui/config/: user_package_list.json
Int-Ball2_platform_simulator/src/platform_sim/device/prop/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/ground/ctl_command_client/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/platform_sim_tools/launch/: platform_manager_bringup.launch
Int-Ball2_platform_simulator/src/platform_sim/simulation/plugins/airflow/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/simulation/plugins/custom_pose_spawn/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/simulation/plugins/hill/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/simulation/plugins/ib2_imu_sensor/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/simulation/plugins/ib2_route_display/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/simulation/plugins/issdyn/: CMakeLists.txt
Int-Ball2_platform_simulator/src/platform_sim/simulation/plugins/mag/: CMakeLists.txt
Int-Ball2_platform_simulator/src/user/: README.md
Int-Ball2_platform_simulator/src/user/user_node/: CMakeLists.txt  package.xml
Int-Ball2_platform_simulator/src/user/user_node/launch/: user_node.launch
Int-Ball2_platform_simulator/src/user/user_node/scripts/: user_node.py
(+4 files in other folders)
